--- a/Tests/.classpath
+++ b/Tests/.classpath
@@ -3,5 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="com.genuitec.eclipse.j2eedt.core.J2EE14_CONTAINER"/>
+	<classpathentry kind="lib" path="C:/J2EE/jboss-4.0.3SP1/server/default/lib/mysql-connector-java-3.1.12-bin.jar"/>
+	<classpathentry kind="lib" path="C:/J2EE/jboss-4.0.3SP1/client/jbossall-client.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
