--- a/ezBayWeb/WebRoot/WEB-INF/web.xml
+++ b/ezBayWeb/WebRoot/WEB-INF/web.xml
@@ -33,5 +33,11 @@
     <servlet-name>action</servlet-name>
     <url-pattern>*.do</url-pattern>
   </servlet-mapping>
+  
+  <taglib>
+    <taglib-uri>/WEB-INF/struts-tiles.tld</taglib-uri>
+    <taglib-location>/WEB-INF/struts-tiles.tld</taglib-location>
+  </taglib>
+  
 </web-app>
 
