--- a/ezBayWeb/.project
+++ b/ezBayWeb/.project
@@ -4,6 +4,7 @@
 	<comment></comment>
 	<projects>
 		<project>ezBay</project>
+		<project>UML_ezBay</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
