--- a/ezBay/.project
+++ b/ezBay/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ezBay</name>
+	<name>UML_ezBay</name>
 	<comment></comment>
 	<projects>
 	</projects>
