lotfi test unitaire categorie

--- a/ezBayWeb/.project
+++ b/ezBayWeb/.project
@@ -3,9 +3,10 @@
 	<name>ezBayWeb</name>
 	<comment></comment>
 	<projects>
-		<project>ezBay</project>
 		<project>UML_ezBay</project>
 		<project>ezBay_tout_en_un</project>
+		<project>CopezBay</project>
+		<project>ezBay</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
