--- a/ezBayWeb/.classpath
+++ b/ezBayWeb/.classpath
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="/ezBay"/>
+	<classpathentry kind="src" path="/CopezBay"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="com.genuitec.eclipse.j2eedt.core.J2EE14_CONTAINER"/>
 	<classpathentry kind="lib" path="C:/J2EE/jboss-4.0.3SP1/server/default/lib/mysql-connector-java-3.1.12-bin.jar"/>
 	<classpathentry kind="lib" path="C:/J2EE/jboss-4.0.3SP1/client/jbossall-client.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/ezBay"/>
-	<classpathentry kind="lib" path="C:/J2EE/ezBay/workspace/ezBayWeb/WebRoot/WEB-INF/lib/junit.jar"/>
-	<classpathentry kind="lib" path="C:/J2EE/ezBay/workspace/ezBayWeb/WebRoot/WEB-INF/lib/junitee.jar"/>
-	<classpathentry kind="lib" path="C:/J2EE/ezBay/workspace/ezBayWeb/WebRoot/WEB-INF/lib/junitee-anttask.jar"/>
+	<classpathentry kind="lib" path="C:/J2EE/ezbay/workspace/ezBayWeb/WebRoot/WEB-INF/lib/junit.jar"/>
+	<classpathentry kind="lib" path="C:/J2EE/ezbay/workspace/ezBayWeb/WebRoot/WEB-INF/lib/junitee.jar"/>
+	<classpathentry kind="lib" path="C:/J2EE/ezbay/workspace/ezBayWeb/WebRoot/WEB-INF/lib/junitee-anttask.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/commons-beanutils.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/commons-collections.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/commons-digester.jar"/>
