--- a/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application.properties
+++ b/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application.properties
@@ -4,23 +4,57 @@
 # Titre Resources
 titre.application=EzBay 
 
+# Labels generaux
+general.label.devise=&euro;
+general.label.jour=jour(s)
+
 # Link Resources
+link.retour=Retour
 link.inscription=S'inscrire
 link.connexion=Se connecter
 link.deconnexion=Se déconnecter
-
+link.vendeur.edit=Editer
+link.membre.edit=Editer
+link.modifier=Modifier
+link.fiche=Afficher la fiche
+link.categories=Liste de Catégories
+link.Recherche.Article=Recherche Articles
+link.valider=Valider
+link.annuler=Annuler
+link.monEzBay=MonEzBay
+link.articleFiche=Fiche article
+link.articleEncherir=Enchérir
+link.fermerSession=Fermer la session
+link.ouvrirSession=Ouvrir une session
 # Label Boutons
 bouton.label.valider=Valider
 bouton.label.annuler=Annuler
 bouton.label.retour=Retour
+boutton.recherche.article=Rechercher
 
 # Erreurs Resources
 erreurs.titre=Erreur !
-errors.header=<font color="red"><b>Erreur(s)</b></font><ul>
-errors.footer=</ul><hr width="100%" size="1" noshade="true" />
+errors.header=<font color="red"><b>Erreur(s)</b></font><br /><br />
+errors.footer=<br /><center><hr width="25%" color="red" size="1" /></center><br />
+
+
+# -- header.jsp --
+header.title=Bienvenue
+
 
 # -- myEzBay.jsp --
+myEzBay.menu.sectionClient.titre=CLIENT
+myEzBay.menu.sectionClient.link.infos=Informations Personnelles
+myEzBay.menu.sectionClient.link.achats=Mes achats
+myEzBay.menu.sectionClient.link.encheres=Mes enchères
+myEzBay.menu.sectionVendeur.titre=VENDEUR
+myEzBay.menu.sectionVendeur.link.infos=Informations Vendeur
+myEzBay.menu.sectionVendeur.link.inscription=S'inscrire comme vendeur
+myEzBay.menu.sectionClient.link.articles=Mes articles
+myEzBay.menu.sectionClient.link.miseEnVente=Mise en vente d'articles
+myEzBay.menu.sectionClient.link.ajoutArticle=Ajout d'article
 myEzBay.erreur.connexion=Mauvaise authentification
+
 
 # -- inscription.jsp --
 inscription.label=Ajout d'un membre
@@ -37,26 +71,91 @@ inscription.label.ville=Ville
 inscription.label.pays=Pays
 inscription.label.telephonefixe=Téléphone (fixe)
 inscription.label.telephoneportable=Téléphone (portable)
-inscription.label.dateNaissance=Date de naissance (jj/mm/aaaa)
+inscription.label.dateNaissance=Date de naissance <br /> (jj/mm/aaaa)
 
 inscription.erreur.nom.obligatoire=<li>Le champ Nom est obligatoire</li>
 inscription.erreur.prenom.obligatoire=<li>Le champ Prénom est obligatoire</li>
 inscription.erreur.pseudo.obligatoire=<li>Le champ Pseudo est obligatoire</li>
 inscription.erreur.password.obligatoire=<li>Le champ Mot de passe est obligatoire</li>
-inscription.erreur.password2.obligatoire=<li>Le champ Vérification Mot de passe est obligatoire</li>
+inscription.erreur.password2.obligatoire=<li>Le champ Vérification du Mot de passe est obligatoire</li>
 inscription.erreur.email.obligatoire=<li>Le champ E-mail est obligatoire</li>
+inscription.erreur.email.invalide=<li>Le champ E-mail est invalide</li>
 inscription.erreur.adresse.obligatoire=<li>Le champ Adresse est obligatoire</li>
 inscription.erreur.codePostal.obligatoire=<li>Le champ Code Postal est obligatoire</li>
+inscription.erreur.codePostal.badFormat=<li>Le champ Code Postal doit comporter maximum 5 chiffres</li>
 inscription.erreur.ville.obligatoire=<li>Le champ Ville est obligatoire</li>
 inscription.erreur.pays.obligatoire=<li>Le champ Pays est obligatoire</li>
-inscription.erreur.telephoneFixe.obligatoire=<li>Le champ Téléphone (fixe) est obligatoire</li>
-inscription.erreur.telephonePortable.obligatoire=<li>Le champ Téléphone (Portable) est obligatoire</li>
 inscription.erreur.dateNaissance.obligatoire=<li>Le champ Date de naissance est obligatoire</li>
 inscription.erreur.dateNaissance.badFormat=<li>la date doit être de la forme jj/mm/aaaa</li>
 inscription.erreur.password.confirmation=<li>Erreur de mot de passe</li>
-inscription.erreur.existMembre=Ce membre est déjà existant !
+inscription.erreur.pseudoDejaUtilise=<li>Le pseudo est déjà utilisé</li>
+inscription.erreur.telephone.obligatoire=<li>Au moins l'un des 2 champs Téléphone doit être rempli</li>
+inscription.erreur.telephone.badFormat=<li>Les champs Téléphone ne doivent comporter que des chiffres</li>
+
+# --/jsp/vendeur.jsp
+vendeur.titre=Inscription en tant que vendeur
+vendeur.titre.infos=Informations Vendeur
+vendeur.titre.infosCB=Information carte bleue
+vendeur.label.numCB=Numéro
+vendeur.label.nomProprioCB=Nom du propriétaire
+vendeur.label.dateExpirCB=Date d'expiration (jj/mm/aaa)
+vendeur.label.codeSecuCB=Code sécurité
+vendeur.inscription.erreur.dateExpirCB.badFormat=<li>La date d'expiration de la CB doit être de la forme jj/mm/aaaa</li>
+vendeur.inscription.erreur.dateExpirCB.obligatoire=<li>Le champ Date d'expiration de la CB est obligatoire</li>
+vendeur.inscription.erreur.codeSecuCB.obligatoire=<li>Le champ Code de Sécurité CB est obligatoire</li>
+vendeur.inscription.erreur.nomProprioCB.obligatoire=<li>Le champ Nom du propriétaire de la CB est obligatoire</li>
+vendeur.inscription.erreur.numCB.obligatoire=<li>Le champ Numéro de la CB est obligatoire</li>
+vendeur.inscription.erreur.numCB.badFormat=<li>Le champ Numéro de la CB doit comporter 16 chiffres</li>
+vendeur.inscription.erreur.codeSecuCB.badFormat=<li>Le champ Code de Sécurité CB doit comporter 3 chiffres</li>
+
+# --/jsp/vendeurArticles.jsp
+vendeurArticles.titre=Vendeur : mes articles
+vendeurArticles.articlesEnAttente.titre=Articles en attente
+vendeurArticles.articlesEnVente.titre=Articles en vente
+vendeurArticles.articlesVendus.titre=Articles vendus
+vendeurArticles.articlesEnAttente.noArticle=Aucun article trouvé.
+vendeurArticles.articlesEnVente.noArticle=Aucun article trouvé.
+vendeurArticles.articlesVendus.noArticle=Aucun article trouvé.
+vendeurArticles.articlesVendus.vente.titre=Informations vente
+vendeurArticles.articlesVendus.avis.titre=Avis
+vendeurArticles.articlesVendus.avis.noAvis=Pas d'avis
+vendeurArticles.link.modifier=Modifier
+vendeurArticles.link.retirer=Retirer
+vendeurArticles.link.mettreEnVente=Mettre en vente
+vendeurArticles.link.supprimer=Supprimer
+
+# --/jsp/clientAchats.jsp
+clientAchats.titre=Client : mes articles achetés
+clientAchats.noArticle=Aucun article trouvé.
+clientAchats.article.date=Date
+clientAchats.vendeur=Vendeur
+clientAchats.deposerAvis.link=Déposer un avis
+clientAchats.avis.titre=Avis
+clientAchats.avis.titre.tresBien=Très Bien
+clientAchats.avis.titre.bien=Bien
+clientAchats.avis.titre.passable=Passable
+clientAchats.avis.titre.mauvais=Mauvais
+
+# --/jsp/avisEdit.jsp
+avisEdit.titre=Déposer un avis
+avisEdit.vendeur=Vendeur
+avisEdit.article=Article
+avisEdit.date=Date
+avisEdit.montant=Montant
+avisEdit.votreAvis=Votre avis
+				
+
+# --/jsp/clientEncheres.jsp
+clientEncheres.titre=Client : mes enchères
+clientEncheres.noArticle=Aucun article trouvé.
+clientEncheres.article.date=Date
+clientEncheres.vendeur=Vendeur
 
 
+
+
+# --/jsp/membreInformations.jsp
+membre.titre.infos=Informations Membre
 
 # -- /default.do --
 default.welcome=Bienvenue !
@@ -68,36 +167,122 @@ default.articleList=Liste des articles ->
 connect.title=Authentification
 connect.login=Login
 connect.password=Mot de passe
-connect.errors.loginVide=Login vide !
-connect.errors.passwordVide=Password vide !
+connect.errors.loginVide=<li>Le champ Login est obligatoire</li>
+connect.errors.passwordVide=<li>Le champ Password est obligatoire</li>
 
 # -- articleList.jsp --
-articleList.title=Liste des articles 2
+articleList.title=Liste des articles
+articleList.categorie.titre=Catégorie
 articleList.libelle=Libellé
 articleList.marque=Marque
 articleList.modele=Modèle
 articleList.prixVente=Prix de Vente
-articleList.anneeFabrication=Année de Fabrication
-articleList.dateLimite=Date Limite
+articleList.prixDepart=Prix de Départ
+articleList.prixActuel=Prix Actuel
+articleList.prix=Prix
+articleList.nbEncheres=Nb enchères
+articleList.derniereEnchere.titre=Dernière enchère
+articleList.derniereEnchere.date=Date de l'enchère
+articleList.derniereEnchere.encherriseur.nom=Dernier enchérisseur
+articleList.transaction.titre=Transaction
+articleList.transaction.client.nom=Acquéreur
+articleList.anneeFabrication=Année
+articleList.dateLimite=Date Limite(jj/mm/aaaa - hh:mm:ss)
+articleList.dateLimiteSimple=Date Limite
 articleList.noArticle=Aucun article trouvé.
+articleList.transaction.avis= Avis
+articleList.transaction.dateAcquisition=Date d'acquisition
 
 # -- articleEdit.jsp --
-articleEdit.title=Liste des articles 2
+articleEdit.title=Ajout d'un article
 articleEdit.libelle=Libellé
+articleEdit.categorie=Catégorie
 articleEdit.marque=Marque
 articleEdit.modele=Modèle
 articleEdit.prixVente=Prix de Vente
 articleEdit.anneeFabrication=Année de Fabrication
-articleEdit.dateLimite=Date Limite
-articleEdit.title=Edition d'un article
+articleEdit.nbJoursValidite=Validite
+articleEdit.dateLimite=Date Limite<br />(jj/mm/aaaa - hh:mm:ss)
+articleEdit.description=Description
 articleEdit.errors.articleNotSaved=L'article n'a pas été enregistré
 
-# -- articleAdd.jsp --
-articleAdd.title=Liste des articles 2
-articleAdd.libelle=Libellé
-articleAdd.marque=Marque
-articleAdd.modele=Modèle
-articleAdd.prixVente=Prix de Vente
-articleAdd.anneeFabrication=Année de Fabrication
-articleAdd.dateLimite=Date Limite
-articleAdd.title=Ajout d'un article		
+articleEdit.erreurs.libelleVide=<li>Le champ Libellé est obligatoire.</li>
+articleEdit.erreurs.marqueVide=<li>Le champ Marque est obligatoire.</li>
+articleEdit.erreurs.dateLimiteVide=<li>Le champ Date limite est obligatoire.</li>
+articleEdit.erreurs.dateLimiteNonValide=<li>Le champ Date limite n'est pas valide. (jj/mm/aaaa - hh:mm:ss)</li>
+articleEdit.erreurs.modeleVide=<li>Le champ Modèle est obligatoire.</li>
+articleEdit.erreurs.prixVenteVide=<li>Le champ Prix de vente est obligatoire.</li>
+articleEdit.erreurs.anneeFabricationVide=<li>Le champ Année de fabrication est obligatoire.</li>
+articleEdit.erreurs.anneeFabricationNonValide=<li>Le champ Année de fabrication n'est pas valide.</li>
+articleEdit.erreurs.prixVenteNonValide=<li>Le champ Prix de vente n'est pas valide.</li>
+
+# -- articleRetrait.jsp --
+articleRetrait.titre=Retrait d'article
+articleRetrait.messageConfirm=Voulez-vous vraiment supprimer l'article ?
+articleRetrait.erreurs.articleEnVente=Vous ne pouvez pas supprimer l'article, il est encore en vente.
+articleRetrait.erreurs.articleEnEnchere=Vous ne pouvez pas supprimer l'article, il y a des enchères dessus.
+articleRetrait.erreurs.articleVendu=Vous ne pouvez pas supprimer l'article, il est déjà vendu.
+articleRetrait.erreurs.nonProprietaire=Vous n'êtes pas le propriétaire de l'article.
+articleRetrait.erreurs.link.retour=Retour aux articles
+
+# -- articleFiche.jsp --
+link.articleFiche=Afficher la fiche
+articleFiche.vendeur.fiche=Vendeur
+articleFiche.title=Fiche Article
+articleFiche.libelle=Libellé
+articleFiche.marque=Marque
+articleFiche.modele=Modèle
+articleFiche.prixVente=Prix initial
+articleFiche.anneeFabrication=Année de Fabrication
+articleFiche.dateLimite=Date Limite
+articleFiche.description=Description
+articleFiche.categorie=Catégorie
+articleFiche.encheres.historique=Historique
+articleFiche.encheres.libelle=Enchère(s)
+articleFiche.derniereEnchere.titre=Dernère enchère
+articleFiche.derniereEnchere.encherisseur=Enchérisseur
+articleFiche.derniereEnchere.montant=Montant
+articleFiche.derniereEnchere.date=Date
+articleFiche.noEnchere=Auncune enchère
+articleFiche.dateDerniereEnchere=Date de la dernière enchère
+
+# -- membreFiche.jsp --
+link.vendeurFiche=Afficher la fiche du vendeur
+link.clientFiche=Afficher la fiche de l'acheteur
+
+membreFiche.title=Fiche Membre
+membreFiche.pseudo=Pseudo
+membreFiche.mesArticles=Articles en vente
+membreFiche.mesAvis=Les avis reçus
+
+# -- membreFiche.jsp --
+categorieList.title=Liste des Catégories
+categorieList.noCategories=Aucune Catégorie Existante
+
+# -- rechercheArticle.jsp --
+rechercheArticle.title=Recherche d'article(s)
+rechercheArticle.prixVenteMin=Prix Minimum
+rechercheArticle.prixVenteMax=Prix Maximum
+rechercheArticle.dateLimite=Date Limite (inférieur ou égale)
+rechercheArticle.anneeFabrication=Année de Fabrication (supérieure ou égale)
+rechercheArticle.nbArticles=Nombre d'article(s) trouvé(s) 
+rechercheArticle.noArticle=Aucun article trouvé
+
+
+# -- enchereEdit.jsp -- 
+articleEnchereEdit.titre=Enchérir
+articleEnchereEdit.libelleArticle=Article
+articleEnchereEdit.derniereEnchere=Montant dernière enchère
+articleEnchereEdit.prixDepart=Prix de départ
+articleEnchereEdit.montant=Votre enchère
+articleEnchereEdit.erreurs.montantVide=Vous devez indiquer un montant pour l'enchère.
+articleEnchereEdit.erreurs.montantInvalide=Montant de l'enchère invalide.
+articleEnchereEdit.erreurs.montantInferieurADerniereEnchere=Vous devez indiquer un montant supérieur à la dernière enchère
+articleEnchereEdit.erreurs.montantInferieurAPrixDepart=Vous devez indiquer un montant supérieur au prix de départ
+articleEnchereEdit.erreurs.membreNonConnecte=Vous devez vous connecter pour poser des enchères.
+articleEnchereEdit.erreurs.articleNonEnVente=Malheureusement l'article n'est plus disponible à la vente. <br /> Votre enchère n'a pas été prise en compte. 
+articleEnchereEdit.link.articleFiche=Retour à l'article
+
+
+# -- footer.jsp --
+footer.title=<font color="#023264" size="-3"><em>        			 Copyright &copy; 2006, Axloso Krupp       </em><br><em>                   Exemple présenté dans le cadre d'un projet                        </em><br><em>                       supervisé par M. Zam et M. Menceur                             </em></font>
