*** empty log message ***

--- a/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application.properties
+++ b/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application.properties
@@ -26,6 +26,7 @@ link.articleFiche=Fiche article
 link.articleEncherir=Enchérir
 link.fermerSession=Fermer la session
 link.ouvrirSession=Ouvrir une session
+
 # Label Boutons
 bouton.label.valider=Valider
 bouton.label.annuler=Annuler
@@ -36,7 +37,6 @@ boutton.recherche.article=Rechercher
 erreurs.titre=Erreur !
 errors.header=<font color="red"><b>Erreur(s)</b></font><br /><br />
 errors.footer=<br /><center><hr width="25%" color="red" size="1" /></center><br />
-
 
 # -- header.jsp --
 header.title=Bienvenue
@@ -98,7 +98,7 @@ vendeur.titre.infos=Informations Vendeur
 vendeur.titre.infosCB=Information carte bleue
 vendeur.label.numCB=Numéro
 vendeur.label.nomProprioCB=Nom du propriétaire
-vendeur.label.dateExpirCB=Date d'expiration (jj/mm/aaa)
+vendeur.label.dateExpirCB=Date d'expiration (jj/mm/aaaa)
 vendeur.label.codeSecuCB=Code sécurité
 vendeur.inscription.erreur.dateExpirCB.badFormat=<li>La date d'expiration de la CB doit être de la forme jj/mm/aaaa</li>
 vendeur.inscription.erreur.dateExpirCB.obligatoire=<li>Le champ Date d'expiration de la CB est obligatoire</li>
@@ -143,7 +143,7 @@ avisEdit.article=Article
 avisEdit.date=Date
 avisEdit.montant=Montant
 avisEdit.votreAvis=Votre avis
-				
+					
 
 # --/jsp/clientEncheres.jsp
 clientEncheres.titre=Client : mes enchères
@@ -221,6 +221,7 @@ articleEdit.erreurs.prixVenteNonValide=<li>Le champ Prix de vente n'est pas vali
 articleRetrait.titre=Retrait d'article
 articleRetrait.messageConfirm=Voulez-vous vraiment supprimer l'article ?
 articleRetrait.erreurs.articleEnVente=Vous ne pouvez pas supprimer l'article, il est encore en vente.
+articleRetrait.erreurs.articlePasEnVente=L'enchère est terminée vous ne pouvez pas enchérir
 articleRetrait.erreurs.articleEnEnchere=Vous ne pouvez pas supprimer l'article, il y a des enchères dessus.
 articleRetrait.erreurs.articleVendu=Vous ne pouvez pas supprimer l'article, il est déjà vendu.
 articleRetrait.erreurs.nonProprietaire=Vous n'êtes pas le propriétaire de l'article.
@@ -254,7 +255,7 @@ link.clientFiche=Afficher la fiche de l'acheteur
 membreFiche.title=Fiche Membre
 membreFiche.pseudo=Pseudo
 membreFiche.mesArticles=Articles en vente
-membreFiche.mesAvis=Les avis reçus
+membreFiche.mesAvis=Articles vendus
 
 # -- membreFiche.jsp --
 categorieList.title=Liste des Catégories
