--- a/ezBayWeb/.classpath
+++ b/ezBayWeb/.classpath
@@ -5,7 +5,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="com.genuitec.eclipse.j2eedt.core.J2EE14_CONTAINER"/>
 	<classpathentry kind="lib" path="C:/J2EE/jboss-4.0.3SP1/client/jbossall-client.jar"/>
-	<classpathentry kind="lib" path="C:/J2EE/ezBay/workspace/ezBayWeb/WebRoot/WEB-INF/lib/junit.jar"/>
 	<classpathentry kind="lib" path="C:/J2EE/ezBay/workspace/ezBayWeb/WebRoot/WEB-INF/lib/junitee.jar"/>
 	<classpathentry kind="lib" path="C:/J2EE/ezBay/workspace/ezBayWeb/WebRoot/WEB-INF/lib/junitee-anttask.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/commons-beanutils.jar"/>
@@ -18,5 +17,6 @@
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/jakarta-oro.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/struts-legacy.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/struts.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/junit-4.0.jar"/>
 	<classpathentry kind="output" path="WebRoot/WEB-INF/classes"/>
 </classpath>
